# rust-web-development

./: .env_template  .gitignore  Cargo.toml  README.md  docker-compose.yml  postman_collection.json
ch-01/minimal-warp/: Cargo.toml
ch-01/minimal-warp/src/: main.rs
ch-02/: Cargo.toml
ch-02/src/: main.rs
handle-error/: Cargo.toml
handle-error/src/: lib.rs
migrations/: 20230813031555_questions_table.up.sql  20230813091002_answers_table.up.sql  20230820145605_create_accounts_table.up.sql  20230826084905_extend_question_table.down.sql
src/: error.rs  main.rs  profanity.rs  store.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
