[package]
name = "rust-web-development"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
warp = "0.3.5"
handle-error = { path = "./handle-error" }
uuid = { version = "1.4.1", features = ["v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "migrate", "postgres"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-middleware = "0.2.3"
